# sqllite-rust

./: .gitignore  .sqllite_history  AGENTS.md  BENCHMARK_REPORT.md  Cargo.toml  DEVELOPMENT_PATHWAY_REVIEW.md  FUZZING.md  FUZZ_SUMMARY.md  LICENSE  PERFORMANCE_COMPARISON.md  PHASE1_WEEK1_SUMMARY.md  PHASE2_P2_P3_COMPLETION.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION.md  README.md  ROADMAP.md  ROADMAP_P0.md  TEST_EXPANSION_REPORT.md  benchmark_plan.md  benchmark_results.json  compare.sh  example.md  run_benchmark.sh  run_fuzz.sh  visualize.py
.github/workflows/: fuzz.yml
benches/: concurrent_stress_bench.rs  executor_opt_bench.rs  generate_concurrent_report.rs  generate_report.rs  mvcc_benchmark.rs  prepared_cache_bench.rs  sqlite_comparison.rs  sqlite_comparison_bench.rs  sqllite_rust_bench.rs  wal_batch_bench.rs
docs/: PR_PHASE_8_B_EXECUTOR_OPTIMIZATION.md  phase2_write_path.md  phase_8a_pr_description.md  phase_8a_summary.md  storage-engine-design.md
docs/decisions/: 001-oltp-focus.md
docs/optimization/: README.md
docs/v1/: 01-prd.md
docs/walkthrough/: Walkthrough-BTree-Fix-2026-03-20.md  Walkthrough-HNSW-Vector-Search-2026-03-20.md  Walkthrough-SQLite-Demo-Enhancement-2026-03-20.md  Walkthrough-VectorSearch-2026-03-20.md
examples/: basic_usage.rs  cache_demo.rs  executor_opt_demo.rs  index_scan_bench.rs  pool_bench.rs  prepared_stmt_bench.rs  range_query_bench.rs  test_insert.rs  vector_hnsw_demo.rs  vector_search_demo.rs
fuzz/: Cargo.toml  check_targets.sh  generate_corpus.py
fuzz/fuzz_targets/: btree_fuzz.rs  expression_fuzz.rs  mvcc_fuzz.rs  record_fuzz.rs  sql_parser_fuzz.rs  storage_fuzz.rs  tokenizer_fuzz.rs  transaction_fuzz.rs
reports/: phase2_concurrent_benchmark.md  phase2_concurrent_results.json
src/: lib.rs  main.rs
src/columnar/: mod.rs
tests/: BOUNDARY_TESTS_README.md  additional_boundary_tests.rs  boundary_extreme_values_tests.rs  boundary_large_values_tests.rs  boundary_null_tests.rs  boundary_special_chars_tests.rs  cache_boundary_tests.rs  collection_boundary_tests.rs  comprehensive_boundary_tests.rs  concurrency_boundary_tests.rs  concurrent_mvcc_test.rs  concurrent_read_benchmark.rs  error_boundary_tests.rs  executor_boundary_tests.rs  executor_optimization_test.rs  final_boundary_tests.rs  index_boundary_tests.rs  index_tests.rs  integration_boundary_tests.rs  integration_ddl_tests.rs  integration_dml_tests.rs  integration_query_tests.rs  integration_transaction_tests.rs  isolation_level_test.rs  long_running_stability_test.rs  mixed_workload_benchmark.rs  more_boundary_tests.rs  mvcc_boundary_tests.rs  mvcc_stress_test.rs  mvcc_write_path_test.rs  numeric_boundary_tests.rs  optimizer_boundary_tests.rs  p8_storage_optimization_tests.rs  pager_boundary_tests.rs  parser_boundary_tests.rs  phase3_storage_optimization_test.rs  phase5_test.rs  property_tests.rs  record_boundary_tests.rs  scenario_tests.rs  (+13 more)
(+134 files in other folders)
