[package]
name = "sqllite-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqllite-rust"
path = "src/main.rs"

[lib]
name = "sqllite_rust"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
rustyline = "14.0"
hashlink = "0.9"
regex = "1.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "sqlite_comparison"
harness = false

[[bench]]
name = "sqllite_rust_bench"
harness = false
